--- a/ipu/static/account/css/landing.css
+++ b/ipu/static/account/css/landing.css
@@ -11,7 +11,7 @@ nav{
     
     height: 92px;
     padding-top: 10px;
-    background-color: #192D5B !important;
+    background-color: #123482 !important;
 
 }
 
@@ -23,7 +23,7 @@ nav .brand-logo {
 }
 
 footer.page-footer {
-    background-color: #192D5B;
+    background-color: #123482;
 }
 
 footer.page-footer {
@@ -88,7 +88,7 @@ footer.page-footer {
     padding: 1px;
     width: 33%;
     height: 40px;
-    background-color: #192D5B !important;
+    background-color: #123482 !important;
     margin-top: 15px;
     z-index: 4654665 !important;
 }
@@ -283,7 +283,7 @@ footer.page-footer {
 nav{
     
     height: 80px;
-    background-color: #192D5B !important;
+    background-color: #123482 !important;
     padding-top: 2px;
 
 
@@ -296,7 +296,7 @@ nav .brand-logo {
 }
 
 footer.page-footer {
-    background-color: #192D5B !important;
+    background-color: #123482 !important;
 }
 
 footer.page-footer {
@@ -372,7 +372,7 @@ footer.page-footer {
     padding-bottom: 5px;
     width: 130px;
     height: 42px;
-    background-color: #192D5B !important;
+    background-color: #123482 !important;
     margin-top: 10px;
     z-index: 467885498 !important;
 }
@@ -526,7 +526,7 @@ footer.page-footer {
 }
 
 footer.page-footer {
-    background-color: #192D5B;
+    background-color: #123482;
 }
 
 footer.page-footer {
@@ -555,7 +555,7 @@ nav{
     
     height: 64px;
     padding-top: 2px;
-    background-color: #192D5B !important;
+    background-color: #123482 !important;
     padding-left: 20px;
 
 }
@@ -568,7 +568,7 @@ nav .brand-logo {
 
 
 footer.page-footer {
-    background-color: #192D5B;
+    background-color: #123482;
 }
 
 footer.page-footer {
@@ -627,7 +627,7 @@ footer.page-footer {
     padding-bottom: 5px;
     width: 180px;
     height: 58px;
-    background-color: #192D5B !important;
+    background-color: #123482 !important;
     z-index: -1 !important;
 }
 
