--- a/ipu/templates/account/forgot_password.html
+++ b/ipu/templates/account/forgot_password.html
@@ -6,7 +6,7 @@
 	Forgot Password
 {% endblock %}
 {% block main %} 
-	<div id="forgot-password-form-div" class="row">
+	<div id="forgot-password-form-div" class="row" style="min-height: 477px;">
 		<h4 class="col s12 center teal-text">Forgot Password</h4>
 		<form class="col s8 offset-s2" action="{% url 'forgot_password' %}" method='POST' id="forgot-password-form">
 			{% csrf_token %}
