--- a/ipu/templates/account/nav-landing.html
+++ b/ipu/templates/account/nav-landing.html
@@ -20,7 +20,7 @@ nav{
     
     height: 92px;
     padding-top: 10px;
-    background-color: #192D5B !important;
+    background-color: #123482 !important;
 
 }
 
@@ -32,7 +32,7 @@ nav .brand-logo {
 }
 
 footer.page-footer {
-    background-color: #192D5B;
+    background-color: #123482;
 }
 
 footer.page-footer {
@@ -124,7 +124,7 @@ footer.page-footer {
   nav{
     
     height: 80px;
-    background-color: #192D5B !important;
+    background-color: #123482 !important;
     padding-top: 2px;
 
 
@@ -137,7 +137,7 @@ nav .brand-logo {
 }
 
 footer.page-footer {
-    background-color: #192D5B !important;
+    background-color: #123482 !important;
 }
 
 footer.page-footer {
@@ -237,7 +237,7 @@ nav{
     
     height: 64px;
     padding-top: 2px;
-    background-color: #192D5B !important;
+    background-color: #123482 !important;
     padding-left: 20px;
 
 }
@@ -250,7 +250,7 @@ nav .brand-logo {
 
 
 footer.page-footer {
-    background-color: #192D5B;
+    background-color: #123482;
 }
 
 footer.page-footer {
