--- a/ipu/templates/account/set_password.html
+++ b/ipu/templates/account/set_password.html
@@ -4,7 +4,7 @@
 {% block title %} Set Password {% endblock %}
 {% block content %} 
 	{% if successful %}
-		<div class="row">
+		<div class="row" style="min-height: 477px;">
 			<h3 class="center col s12 flow-text teal-text text-accent-4">Your password has been reset successfully!</h3>
 			<p class="center col s12 flow-text blue-text">We're still there if you happen to forget it again!</p>
 			<div class="col s12">
@@ -16,7 +16,7 @@
 			<h3 class="center flow-text red-text"> The reset password link is invalid.</h3>
 			<p class="center flow-text blue-text">If you're viewing this page after clicking the reset link sent to your registered email address, then chances are that the reset link has expired.<br>Please try resetting again by clicking <b><a href="{% url 'forgot_password' %}">here</a></p></b>
 		{% else %}
-		<div id="password-reset-form-div" class="row">
+		<div id="password-reset-form-div" class="row" style="min-height: 477px;">
 			<h4 class="col s12">Set Password</h4>
 			<form class="col s12" action="{% url 'reset_password' user_hashid=user_hashid token=token %}" method='POST' id="password-reset-form">
 				{% csrf_token %}
