--- a/ipu/templates/account/set_usable_password_activation.html
+++ b/ipu/templates/account/set_usable_password_activation.html
@@ -4,7 +4,7 @@
 {% block title %} Set Password {% endblock %}
 {% block content %} 
 	{% if successful %}
-		<div class="row">
+		<div class="row"  >
 			<h3 class="center col s12 flow-text teal-text text-accent-4">Your account has been verified!</h3>
 			<p class="center col s12 flow-text blue-text">New password has been set. Make sure not to share it with anyone.</p>
 			<div class="col s12">
@@ -16,7 +16,7 @@
 			<h3 class="center flow-text red-text"> The activation link is invalid.</h3>
 			<p class="center flow-text blue-text">If you're viewing this page after clicking the reset link sent to your registered email address, then chances are that the link has already been used.<br>If you don't recognize this activity, then we suggest that you should change your password immediately.</p></b>
 		{% else %}
-		<div id="set-password-form-div" class="row">
+		<div id="set-password-form-div" class="row" style="min-height: 477px;">
 			<h4 class="col s12">Set Password</h4>
 			<form class="col s12" action="{% url 'usable_pwd_activation' user_hashid=user_hashid token=token %}" method='POST' id="set-password-form">
 				{% csrf_token %}
