--- a/ipu/templates/account/inactive.html
+++ b/ipu/templates/account/inactive.html
@@ -3,7 +3,7 @@
 {% block title %}Account Inactive{% endblock title %}
 {% block head %} <link type="text/css" rel="stylesheet" href="{% static 'student/inactive.css'%}"  media="screen,projection"/> {% endblock %}
 {% block content %}
-	<div class="container teal-text" id="main-box">
+	<div class="container teal-text" id="main-box" style="min-height: 500px;">
 		<div class="row">
 			<div class="col s8 offset-s2">
 				<h5 style="color: #1c262f;"> Your account is inactive. </h5>
@@ -18,6 +18,4 @@
 			<a class="col s2 offset-s5 waves-effect waves-light btn" href="{% url 'auth' %}">Back</a>
 		</div>
 	</div>
-{% endblock content %}
-
-Red.carpet@009
+{% endblock %}
