--- a/ipu/templates/account/post_signup.html
+++ b/ipu/templates/account/post_signup.html
@@ -3,7 +3,7 @@
 {% block title %}Account Activation{% endblock title %}
 {% block head %} <link type="text/css" rel="stylesheet" href="{% static 'account/post_signup.css'%}"  media="screen,projection"/> {% endblock %}
 {% block content %}
-	<div class="container blue-text">
+	<div class="container blue-text" style="min-height: 500px;">
 		<div class="row">
 			<div class="col s8 offset-s2">
 				<h3> Welcome Aboard {{ user.username }}! </h3>
