--- a/ipu/templates/account/auth.html
+++ b/ipu/templates/account/auth.html
@@ -68,7 +68,7 @@
        </a>
       <a class="hide-on-large-only" href = "javascript:void(0)" onclick = "document.getElementById('recruiter-sign-up').style.display='none';document.getElementById('fade').style.display='none'"><i class="fa fa-times fa-2x" id="cross"></i>
        </a> 
-       <div class="col" id="recruiter-signup-mainbox">
+       <div class="col" id="recruiter-signup-mainbox" site-key="{% recaptcha_site_key %}">
 				<div class="col s12" id="recruiter-signup-box">
 					<div class="card-panel">
 						<h4 class="center-align"> Recruiter Signup </h4>
