contact_us page added

--- a/ipu/templates/account/forgot_password.html
+++ b/ipu/templates/account/forgot_password.html
@@ -6,14 +6,36 @@
 	Forgot Password
 {% endblock %}
 {% block main %} 
-	<div id="forgot-password-form-div" class="row" style="min-height: 477px;">
+<style type="text/css">
+	 @media (min-width:300px) and (orientation: portrait){
+
+	 	#forgot-password-form-div
+	 	{
+	 		padding-top: 7%;
+	 	}
+
+	 	h4 {
+    font-size: 2.28rem;
+    line-height: 110%;
+    margin: 1.14rem 0 0.912rem 0;
+    margin-bottom: 0px;
+       }
+
+       .section {
+    padding-top: .5rem;
+    padding-bottom: 1rem;
+}
+	 }
+</style>
+
+	<div id="forgot-password-form-div" class="row">
 		<h4 class="col s12 center teal-text">Forgot Password</h4>
-		<form class="col s8 offset-s2" action="{% url 'forgot_password' %}" method='POST' id="forgot-password-form">
+		<form class="col s12 l8 offset-l2" action="{% url 'forgot_password' %}" method='POST' id="forgot-password-form">
 			{% csrf_token %}
 			{% form form=forgot_password_form %}{% endform %}
 			<div id='forgot-password-recaptcha-div' site-key="{% recaptcha_site_key %}" style="margin-bottom: 2%;"></div>
 			<div class="col s12">
-				<button type="submit" name="forgot_password" class="btn btn-waves-light col s8 offset-s2" style="width: 60%">Proceed</button>
+				<button type="submit" name="forgot_password" class="btn btn-waves-light col s8 offset-s2">Proceed</button>
 			</div>
 		</form>
 	</div>
