--- a/ipu/templates/account/procedure.html
+++ b/ipu/templates/account/procedure.html
@@ -12,6 +12,7 @@
 {% block main %}
   <div id="main-box">
    <h4>Placement Process</h4>
+   <p style="margin: 2px;"><i>{ Image courtesy : Google }</i></p>
     <ol id="steps">
       <li class="step">
         <img src="{% static 'images/process_pics/1.png' %}">
