--- a/ipu/templates/stats/stats.html
+++ b/ipu/templates/stats/stats.html
@@ -27,7 +27,7 @@
 
 
 {% block main %}
-<div class="row" style="min-height: 477px;">
+<div class="row">
 	<div class="col s10 m8 offset-s1 offset-m2" id="stats-form-div">
 		<form method="GET" id="stats-form" action="{% url 'stats' %}">
 			<h4 class="teal-text flow-text center-align"><b>Placement Statistics</b></h4>
@@ -47,4 +47,17 @@
 	</script>
 	<script src="{% static 'sweetalert/dist/sweetalert.min.js' %}"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+	<script type="text/javascript">
+ $('.dropdown-button').dropdown({
+      inDuration: 300,
+      outDuration: 225,
+      constrainWidth: false, // Does not change width of dropdown to that of the activator
+      hover: true, // Activate on hover
+      gutter: 0, // Spacing from edge
+      belowOrigin: false, // Displays dropdown below the button
+      alignment: 'right', // Displays dropdown with edge aligned to the left of button
+      stopPropagation: false // Stops event propagation
+    }
+  );
+ </script> 
 {% endblock %}
