--- a/ipu/templates/account/landing.html
+++ b/ipu/templates/account/landing.html
@@ -145,7 +145,7 @@
             <div class="row" style="margin-bottom: 0px;">
               <div class="col l10 offset-l1 s12">
                 <ul style="display: flex;width: 90%;justify-content: space-between;" id="footer-links">
-                  <li><a class="grey-text text-lighten-3" href="#!">Contact Us</a></li>
+                  <li><a class="grey-text text-lighten-3" href="{% url 'contact_us' %}">Contact Us</a></li>
                   <li> | </li>
                   <li><a class="grey-text text-lighten-3" href="#!">Feedback</a></li>
                   <li> | </li>
