--- a/ipu/templates/stats/past_recruiters_compiled.html
+++ b/ipu/templates/stats/past_recruiters_compiled.html
@@ -55,7 +55,28 @@
 			
 
 <style type="text/css">
-  @media (min-width:300px) and (orientation: portrait){ 
+  @media (min-width:300px) and (orientation: portrait){
+
+     html {
+  height: 100%;
+  box-sizing: border-box;
+}
+
+body {
+  position: relative;
+  margin: 0;
+  padding-bottom: 6rem;
+  min-height: 100%;
+}
+
+footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  text-align: center;
+}
 
 
 nav{
@@ -72,6 +93,14 @@ nav .brand-logo {
 
     font-size: 1.6rem;
 }
+
+footer
+{
+  bottom: 0px;
+  position: absolute;
+  width: 100%;
+}
+
 
 footer.page-footer {
     background-color: #123482;
@@ -161,8 +190,28 @@ footer.page-footer {
  
 }
 
-@media (min-width:300px) and (max-width:992px) and (orientation: landscape) { 
+@media (min-width:300px) and (max-width:992px) and (orientation: landscape) {
 
+   html {
+  height: 100%;
+  box-sizing: border-box;
+}
+
+body {
+  position: relative;
+  margin: 0;
+  padding-bottom: 6rem;
+  min-height: 100%;
+}
+
+footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  text-align: center;
+}
   nav{
     
     height: 80px;
@@ -177,6 +226,7 @@ nav .brand-logo {
     text-transform: capitalize; /* New */
   font-size: 1.6rem;
 }
+
 
 footer.page-footer {
     background-color: #123482 !important;
@@ -274,6 +324,27 @@ footer.page-footer {
 
 @media (min-width:992px) {
 
+  html {
+  height: 100%;
+  box-sizing: border-box;
+}
+
+body {
+  position: relative;
+  margin: 0;
+  padding-bottom: 6rem;
+  min-height: 100%;
+}
+
+footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  text-align: center;
+}
+
 
 nav{
     
@@ -290,6 +361,12 @@ nav .brand-logo {
   font-size: 1.6rem;
 }
 
+footer
+{
+  bottom: 0px;
+  position: absolute;
+  width: 100%;
+}
 
 footer.page-footer {
     background-color: #123482;
@@ -448,8 +525,8 @@ footer.page-footer {
 			
   
   
-<div class="row" style="min-height: 477px;margin-top: 5%">
-	<div class="col s10 m8 offset-s1 offset-m2">
+<div class="row" style="min-height: 477px; margin-top: 5%">
+	<div class="col s12 m10 offset-m1 l8 offset-l2">
 		<h1 class="blue-text flow-text text-darken-2 center-align"><b>Recruiters Associated With Us</b></h1>
 		<table class="striped centered">
 			<thead>
@@ -569,7 +646,7 @@ footer.page-footer {
 		</table>
 	</div>
 	<div class="col s10 offset-s1 divider" style="margin-top: 3%"></div>
-	<div class="col s8 offset-s2 flow-text teal lighten-5 teal-text text-darken-3 center" style="margin-top: 3%">Want to associate with us? <a href="/auth/#other-login-tab">Signup Here</a></div>
+	<div class="col s12 m10 offset-m1 l8 offset-l2 flow-text teal lighten-5 teal-text text-darken-3 center" style="margin-top: 3%; margin-bottom: 5%;">Are you a recruiter?&nbsp;&nbsp;<a href="/auth/#other-login-tab">Signup Here</a></div>
 </div>
   
   
@@ -580,7 +657,7 @@ footer.page-footer {
             <div class="row" style="margin-bottom: 0px;">
               <div class="col l10 offset-l1 s12">
                 <ul style="display: flex;width: 90%;justify-content: space-between;" id="footer-links">
-                  <li><a class="grey-text text-lighten-3" href="#!">Contact Us</a></li>
+                  <li><a class="grey-text text-lighten-3" href="/contact_us/">Contact Us</a></li>
                   <li style="color: #6ACEEB"> | </li>
                   <li><a class="grey-text text-lighten-3" href="#!">Feedback</a></li>
                   <li style="color: #6ACEEB"> | </li>
