--- a/ipu/templates/account/base.html
+++ b/ipu/templates/account/base.html
@@ -6,6 +6,7 @@
 			{% block title %}{% endblock title %}
 		</title>
 		<link type="text/css" rel="stylesheet" href="{% static 'common/css/font-awesome.min.css' %}" />
+<!--		<link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" integrity="sha384-dNpIIXE8U05kAbPhy3G1cz+yZmTzA6CY8Vg/u2L9xRnHjJiAK76m2BIEaSEV+/aU" crossorigin="anonymous">-->
 		<link type="text/css" rel="stylesheet" href="{% static 'account/css/base.css' %}" />
 		<link type="text/css" rel="stylesheet" href="{% static 'materialize-blue.css' %}" >
 		<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
