--- a/ipu/templates/student/scores_marksheet.html
+++ b/ipu/templates/student/scores_marksheet.html
@@ -59,3 +59,4 @@
 		</ul>
 	</div>
 </form>
+<h6 class="col s12 center orange-text"><b>Note: </b>Your percentage will be calculated on the basis of first 5 subjects. Make sure to fill them in order.</h6>
