--- a/ipu/templates/account/forgot_password_email_sent.html
+++ b/ipu/templates/account/forgot_password_email_sent.html
@@ -2,9 +2,9 @@
 {% block title %} Forgot Password Email Sent {% endblock %}
 {% block main %} 
 	<div class="row">
-		<p class="col s10 m8 offset-s1 offset-m2 flow-text teal-text">We've emailed you the instructions for resetting your password at <b>{{ email }}</b>.<br> If an account exists with the email you entered, you should receive them shortly.</p>
+		<p class="col s12 m10 offset-m1 flow-text teal-text">We've emailed you the instructions for resetting your password at <b>{{ email }}</b>.<br> If an account exists with the email you entered, you should receive them shortly.</p>
 	<br>
-	<p class="col s10 m8 offset-s1 offset-m2 flow-text blue-text">If you don't receive an email, please make sure you've entered the address you registered with, and check your spam folder.</p>
+	<p class="col s12 m10 offset-m1 flow-text blue-text">If you don't receive an email, please make sure you've entered the address you registered with, and check your spam folder.</p>
 	<div class="col s12">
 		<a class="btn btn-waves-light col s8 offset-s2" href="{% url 'landing' %}">Back To Site&nbsp;<i class="fa fa-arrow-left fa-2x"></i></a>
 	</div>
