--- a/ipu/templates/account/post_signup.html
+++ b/ipu/templates/account/post_signup.html
@@ -1,20 +1,19 @@
 {% extends 'account/nav-landing.html' %}
 {% load staticfiles %}
 {% block title %}Account Activation{% endblock title %}
-{% block head %} <link type="text/css" rel="stylesheet" href="{% static 'account/post_signup.css'%}"  media="screen,projection"/> {% endblock %}
+{% block head %}
+	<link type="text/css" rel="stylesheet" href="{% static 'account/post_signup.css'%}"  media="screen,projection"/>
+	<link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" integrity="sha384-dNpIIXE8U05kAbPhy3G1cz+yZmTzA6CY8Vg/u2L9xRnHjJiAK76m2BIEaSEV+/aU" crossorigin="anonymous">
+{% endblock %}
 {% block content %}
 	<div class="container blue-text">
 		<div class="row">
-			<div class="col s8 offset-s2">
-				<h3> Welcome Aboard {{ user.username }}! </h3>
+			<div class="col s12 flow-text">
+				<h4 class="red-text text-lighten-3 center"> Welcome Aboard, <b>{{ user.username }}</b> <i class="fa fa-smile-o"></i> </h4>
+				<p class="teal-text text-lighten-2 center"> We've emailed you the instructions for activating your account, to the registered email address <b class="blue-grey-text text-lighten-3">{{ user.email }}</b>.<br>Please follow the instructions as indicated in the email message.</p>
 				<br>
-				<p> An account activation links has been sent to your registered email address {{ user.email }}.</p>
-				<p> Click on the activation link in the email. </p>
-				<p> Please check your SPAM folder also incase you didn't receive the email. </p>
+				<p class="blue-text text-lighten-3 center"><b>Note: </b>If you did <b>not</b> receive an email, please make sure that you entered the correct email address while registering, and check your spam folder. </p>
 			</div>
-		</div>
-		<div class="row">
-			<h2 class="col s8 offset-s2"> Hope to see you soon! </h2>
 		</div>
 	</div>
 {% endblock content %}
