--- a/ipu/templates/account/inactive.html
+++ b/ipu/templates/account/inactive.html
@@ -2,15 +2,16 @@
 {% load staticfiles %}
 {% block title %}Account Inactive{% endblock title %}
 {% block head %}
+	{{ block.super }}
 	<link type="text/css" rel="stylesheet" href="{% static 'account/post_signup.css'%}"  media="screen,projection"/>
-	<link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" integrity="sha384-dNpIIXE8U05kAbPhy3G1cz+yZmTzA6CY8Vg/u2L9xRnHjJiAK76m2BIEaSEV+/aU" crossorigin="anonymous">
+<!--	<link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" integrity="sha384-dNpIIXE8U05kAbPhy3G1cz+yZmTzA6CY8Vg/u2L9xRnHjJiAK76m2BIEaSEV+/aU" crossorigin="anonymous">-->
 {% endblock %}
 {% block content %}
 	<div class="container blue-text">
 		<div class="row">
 			<div class="col s12 flow-text">
 				<h4 class="red-text text-lighten-3 center"> Your account is inactive <i class="fa fa-frown-o"></i> </h4>
-				<p class="teal-text text-lighten-2 center"> An account activation email had been sent to your registered email address <b class="blue-grey-text text-lighten-3">pratulyabubna@outlook.com{{ user.email }}</b>.<br>Please follow the instructions as indicated in the email message.</p>
+				<p class="teal-text text-lighten-2 center"> An account activation email had been sent to your registered email address <b class="blue-grey-text text-lighten-3">{{ user.email }}</b>.<br>Please follow the instructions as indicated in the email message.</p>
 				<br>
 				<p class="blue-text text-lighten-3 center"><b>Note: </b>If you did <b>not</b> receive an email, please make sure that you entered the correct email address while registering, and check your spam folder.{% if not user_hashid %}<br>To be able to <b>resend</b> activation email, login <b>after 30 min</b> from now.{% endif %}</p>
 			</div>
