Feedback , Forgot password completed

--- a/ipu/templates/account/landing.html
+++ b/ipu/templates/account/landing.html
@@ -147,7 +147,7 @@
                 <ul style="display: flex;width: 90%;justify-content: space-between;" id="footer-links">
                   <li><a class="grey-text text-lighten-3" href="{% url 'contact_us' %}">Contact Us</a></li>
                   <li> | </li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Feedback</a></li>
+                  <li><a class="grey-text text-lighten-3" href="{% url 'feedback' %}">Feedback</a></li>
                   <li> | </li>
                   <li><a href="http://www.ipu.ac.in/rti.php" class="grey-text text-lighten-3" target="_blank" href="#!">RTI</a></li>
                   <li> | </li>
