--- a/ipu/templates/stats/past_recruiters_compiled.html
+++ b/ipu/templates/stats/past_recruiters_compiled.html
@@ -6,6 +6,7 @@
 			Past Recruiters – Guru Gobind Singh Indraprastha University | Placement stats IP university | Placement statistics Indraprastha University | Placement record IP univeristy | Placements at IP university | Placement record of IPU | Placement  percentage of IPU | Training and placement cell - Guru Gobind Singh Indraprastha University
 		</title>
 		<link type="text/css" rel="stylesheet" href="/static/common/css/font-awesome.min.css" />
+<!--		<link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" integrity="sha384-dNpIIXE8U05kAbPhy3G1cz+yZmTzA6CY8Vg/u2L9xRnHjJiAK76m2BIEaSEV+/aU" crossorigin="anonymous">-->
 		<link type="text/css" rel="stylesheet" href="/static/account/css/base.css" />
 		<link type="text/css" rel="stylesheet" href="/static/materialize-blue.css" >
 		<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
@@ -799,7 +800,7 @@ footer.page-footer {
                 <ul style="display: flex;width: 90%;justify-content: space-between;" id="footer-links">
                   <li><a class="grey-text text-lighten-3" href="/contact_us/">Contact Us</a></li>
                   <li style="color: #6ACEEB"> | </li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Feedback</a></li>
+                  <li><a class="grey-text text-lighten-3" href="/feedback/">Feedback</a></li>
                   <li style="color: #6ACEEB"> | </li>
                   <li><a target="_blank" href="http://www.ipu.ac.in/rti.php" class="grey-text text-lighten-3" target="_blank" href="#!">RTI</a></li>
                   <li style="color: #6ACEEB"> | </li>
